; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan.c_lwan_fd_watch_init.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan.c_lwan_fd_watch_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lwan = type { i64 }

@EPOLL_CLOEXEC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"epoll_create1\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lwan*)* @lwan_fd_watch_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lwan_fd_watch_init(%struct.lwan* %0) #0 {
  %2 = alloca %struct.lwan*, align 8
  store %struct.lwan* %0, %struct.lwan** %2, align 8
  %3 = load i32, i32* @EPOLL_CLOEXEC, align 4
  %4 = call i64 @epoll_create1(i32 %3)
  %5 = load %struct.lwan*, %struct.lwan** %2, align 8
  %6 = getelementptr inbounds %struct.lwan, %struct.lwan* %5, i32 0, i32 0
  store i64 %4, i64* %6, align 8
  %7 = load %struct.lwan*, %struct.lwan** %2, align 8
  %8 = getelementptr inbounds %struct.lwan, %struct.lwan* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp slt i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = call i32 @lwan_status_critical_perror(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  br label %13

13:                                               ; preds = %11, %1
  ret void
}

declare dso_local i64 @epoll_create1(i32) #1

declare dso_local i32 @lwan_status_critical_perror(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
